[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "time-series-transformers"
dynamic = ["version"]
requires-python = ">=3.12"
authors = [{ name = "Jesse Grabowski", email = "jessegrabowski@gmail.com" }]
description = "sklearn transformers for working with time series data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "time-series",
    "scikit-learn",
    "sklearn",
    "transformers",
    "preprocessing",
    "feature-engineering",
    "pandas",
    "detrending",
    "hamilton-filter",
    "hp-filter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "pandas>=3.0",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "mypy",
    "polars",
]

[project.urls]
Homepage = "https://github.com/jessegrabowski/time_series_transformers"
Repository = "https://github.com/jessegrabowski/time_series_transformers"
Issues = "https://github.com/jessegrabowski/time_series_transformers/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "time_series_transformers/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["time_series_transformers"]

[tool.pytest.ini_options]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "D",
    "E", "F", "W",
    "I",
    "NPY",
    "PERF",
    "PL",
    "RUF",
    "SIM",
    "T10",
    "T20",
    "TID",
    "TRY",
    "UP",
]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    "PLR2004",
    "RUF001",
    "RUF002",
    "TRY003",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]

[tool.mypy]
python_version = "3.12"
files = ["time_series_transformers"]
ignore_missing_imports = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
